Update to add Corsican translations

--- a/bin/setup/lang/gwd_info.htm
+++ b/bin/setup/lang/gwd_info.htm
@@ -8,6 +8,7 @@
   <link rel="shortcut icon" href="images/favicon_gwsetup.png">
 
   <title>[
+co: Serviziu gwd
 de: Service gwd
 en: Service gwd
 es: Servicio gwd
@@ -25,6 +26,7 @@ lv: Gwd serviss
 <div style="background:url('images/gwlogo.png') no-repeat left top; text-align:center; height:95px; line-height:95px; color:#2f6400;">
 <h1 style="margin:0;">
 [
+co: Serviziu gwd
 de: Service gwd
 en: Service gwd
 es: Servicio gwd
@@ -40,6 +42,7 @@ lv: Gwd serviss
 <p><p>
 
 [
+co: Per principià u serviziu :
 de: Um den Service zu starten:
 en: To start the service:
 es: Para lanzar el servicio:
@@ -53,6 +56,7 @@ lv: Lai palaistu servisu:
 <p>
 
 <ul><li>[
+co: Sottu <b>Windows</b>, lanciate u prugramma « gwd ».
 de: Unter <b>Windows</b> verwende einen Doppelklick auf das  "gwd"-Icon,
     dann kehre hierher zurück.
 en: Under Windows, launch the program "gwd".
@@ -70,6 +74,7 @@ lv: Windows vidç - dubultklikðíis uz "gwd" ikoniòas un tad atgriezieties
 <p>
 
 <ul><li>[
+co: Sottu <b>Linux</b>, lanciate un « xterm » è scrivite sta seguita di cumande :
 de: Unter <b>Unix</b> starte ein xterm und gib die folgenden Kommandos ein:
 en: Under Unix, launch an xterm and type the following commands:
 es: A partir de Unix, lanzar un xterm y ecribir con el teclado los comandos
@@ -93,6 +98,10 @@ lv: Unix vidç - palaidiet xterm un uzrakstiet sekojoðas komandas:
 <p>
 
 <ul><li>[
+co: Sottu <b>Linux</b>, s’è vò avete installatu
+    <font color=#2f6400><b>GeneWeb</b></font> da un pacchettu rpm,
+	u serviziu hè statu lanciatu autumaticamente. S’è vò l’avete
+	piantatu è vulete rilanciallu, diventate « root » è scrivite :
 de: Unter <b>Linux</b> wird der Service automatisch gestartet, sofern du
     <font color=#2f6400><b>GeneWeb</b></font> als RPM-Paket installiert
     hast. Wenn du den Dienst gestoppt hast und ihn neu starten
@@ -134,6 +143,7 @@ lv: Linux vidç -  ja Jûs esiet uzstâdîjuði <font
 <p>
 
 [
+co: Per piantà u serviziu :
 de: Um den Service zu stoppen:
 en: To stop the service:
 es: Pora parar el servicio:
@@ -147,6 +157,8 @@ lv: Lai apstâdinâtu servisu:
 <p>
 
 <ul><li>[
+co: Sottu <b>Windows</b> o <b>Linux</b>, scrivite « control C »
+    in a finestra induve ellu funziuneghja.
 de: Unter <b>Windows</b> oder <b>Unix</b> drücke Control-C (bzw.
     Strg-C)  in dem Fenster, wo gwd läuft.
 en: Under Windows or Unix, type "control C" in the window where it is
@@ -168,6 +180,9 @@ lv: Windows vai Unix vidç - nospiediet "ctrl C" pie aktîva loga, kurâ tas
 <p>
 
 <ul><li>[
+co: Sottu <b>Linux</b>, s’è vò avete installatu
+    <font color=#2f6400><b>GeneWeb</b></font> da un pacchettu rpm,
+	diventate « root » è scrivite :
 de: Unter <b>Linux</b> gib, sofern <font color=#2f6400><b>GeneWeb</b></font>
     als RPM-Paket installiert ist, als root folgendes Kommando ein:
 en: Under Linux, if you installed <font color=#2f6400><b>GeneWeb</b></font>
