--- a/bin/setup/lang/gwd_ok.htm
+++ b/bin/setup/lang/gwd_ok.htm
@@ -8,6 +8,7 @@
   <link rel="shortcut icon" href="images/favicon_gwsetup.png">
 
   <title>[
+co: Parametri mudificati
 de: Parameter geändert
 en: Parameters updated
 es: Parámetros actualizados
@@ -24,6 +25,7 @@ sv: Parametrar uppdaterade
 <div style="background:url('images/gwlogo.png') no-repeat left top; text-align:center; height:95px; line-height:95px; color:#2f6400;">
 <h1>
 [
+co: Parametri mudificati
 de: Parameter geändert
 en: Parameters updated
 es: Parámetros actualizados
@@ -38,6 +40,9 @@ sv: Parametrar uppdaterade
 <p>
 
 <font color=red>[
+co: Per chì i parametri sianu pigliati in contu,
+    ci vole à piantà u <a href="gwsetup?lang=%l;v=gwd_info.htm">serviziu gwd</a>
+	- s’ellu funziuneghja - è rilanciallu.
 de: Damit die Parameter wirksam werden, muß der 
     <a href="gwsetup?lang=%l;v=gwd_info.htm">gwd-Dienst</a> 
     (sofern er lief) gestoppt und neu gestartet werden.
@@ -65,6 +70,9 @@ sv: För att parametrarna ska kunna börja användas, måste <a
 <p>
 
 [
+co: Infurmazione : i parametri sò arregistrati in u schedariu
+    di testu chì si chjama « gwd.arg » in u cartulare « gw »
+	di a distribuzione <font color=#2f6400><b>GeneWeb</b></font>.
 de: Zu deiner Information: Die Parameter sind in der Textdatei "gwd.arg"
     im Verzeichnis "gw" deiner
     <font color=#2f6400><b>GeneWeb</b></font>-Installation gespeichert.
@@ -90,6 +98,7 @@ sv: Information: parametrarna är lagrade i en textfil benämnd "gwd.arg"
 <p>
 
 [
+co: Eccu u so cuntenutu :
 de: Hier ist der Inhalt der Datei:
 en: Here is its contents:
 es: He aquí su contenido:
@@ -104,6 +113,7 @@ sv: Här är dess innehåll:
 <dl><dt><dd>
 <pre>
 %r{- [
+co: schedariu viotu
 de: Datei leer
 en: empty file
 es: fichero vacio
@@ -115,6 +125,8 @@ sv: tom fil
 </dl>
 
 [
+co: Pudete rivene à u <a href="gwsetup?lang=%l;v=welcome.htm">listinu
+    principale</a>.
 de: Zurück zum <a href="gwsetup?lang=%l;v=welcome.htm">Hauptmenü</a>.
 en: You can return to the <a href="gwsetup?lang=%l;v=welcome.htm">main menu</a>.
 es: Ud. puede regresar al <a href="gwsetup?lang=%l;v=welcome.htm">menú
