--- a/bin/setup/lang/gwdiff.htm
+++ b/bin/setup/lang/gwdiff.htm
@@ -8,6 +8,7 @@
   <link rel="shortcut icon" href="images/favicon_gwsetup.png">
 
   <title>[
+co: Calculà a sfarenza trà e duie base
 en: Compute the difference between two bases
 fr: Détection des différences entre deux bases
 ]</title>
@@ -19,6 +20,7 @@ fr: Détection des différences entre deux bases
 <div style="background:url('images/gwlogo.png') no-repeat left top; text-align:center; height:95px; line-height:95px; color:#2f6400;">
 <h1 style="margin:0;">
 [
+co: Calculà a sfarenza trà e duie base
 en: Compute the difference between two bases
 fr: Détection des différences entre deux bases
 ]
@@ -34,6 +36,7 @@ fr: Détection des différences entre deux bases
 <td>
 <ul><li>
 [
+co: Selezziunate a vostra prima basa di dati :
 en: Select your first database:
 fr: Sélectionnez la première base de données :
 ]
@@ -44,6 +47,7 @@ fr: Sélectionnez la première base de données :
 <td><input type=radio name=anon1 value="%a">   </td>
 <td>%a</td></tr>|
 <tr align=left><td>- [
+co: ùn ci hè alcuna basa di dati à stu mumentu
 de: keine Datenbank vorhanden
 en: there is no database at present
 es: actualmente ninguna base de datos existe
@@ -56,6 +60,8 @@ sv: det finns ingen databas för tillfället
 <p>
 <table class="setup">
 <tr align=left><td> </td><td colspan=3>[
+co: Persona di principu in a prima basa.<br>
+    <span style="color:#FF0000;">Parametru ubblicatoriu</span>
 en: Starting person in first base.<br>
     <span style="color:#FF0000;">Mandatory parameter</span>
 fr: Personne racine dans la première base.<br>
@@ -63,6 +69,7 @@ fr: Personne racine dans la première base.<br>
 ]</td></tr>
 
 <tr align=left><td>[
+co: Nome
 de: Vorname
 en: First name
 es: Nombre
@@ -74,6 +81,7 @@ sv: Förnamn
 <td><input name="a1" size=30 maxlength=200></td>
 
 <td>[
+co: Num
 de: Nr
 en: Num
 es: Núm
@@ -85,6 +93,7 @@ sv: Nummer
 <td><input name="a2" size=5 maxlength=8></td></tr>
 
 <tr align=left><td>[
+co: Casata
 de: Nachname
 en: Surname
 es: Apellido
@@ -101,6 +110,7 @@ sv: Efternamn
 <td>
 <ul><li>
 [
+co: Selezziunate a vostra seconda basa di dati :
 en: Select your second database:
 fr: Sélectionnez la seconde base de données :
 ]
@@ -114,6 +124,8 @@ fr: Sélectionnez la seconde base de données :
 <p>
 <table class="setup">
 <tr align=left><td> </td><td colspan=3>[
+co: Persona di principu in a seconda basa.<br>
+    <span style="color:#FF0000;">Parametru ubblicatoriu</span>
 en: Starting person in second base.<br>
     <span style="color:#FF0000;">Mandatory parameter</span>
 fr: Personne racine dans la seconde base.<br>
@@ -121,6 +133,7 @@ fr: Personne racine dans la seconde base.<br>
 ]</td></tr>
 
 <tr align=left><td>[
+co: Nome
 de: Vorname
 en: First name
 es: Nombre
@@ -132,6 +145,7 @@ sv: Förnamn
 <td><input name="b1" size=30 maxlength=200></td>
 
 <td>[
+co: Num
 de: Nr
 en: Num
 es: Núm
@@ -143,6 +157,7 @@ sv: Nummer
 <td><input name="b2" size=5 maxlength=8></td></tr>
 
 <tr align=left><td>[
+co: Casata
 de: Nachname
 en: Surname
 es: Apellido
@@ -160,6 +175,7 @@ sv: Efternamn
 <p>
 <li>
 [
+co: Selezziunate l’ozzioni chì vò vulete :
 de: Wähle die gewünschten Optionen:
 en: Select the options you want:
 es: Seleccione las opciones que Ud. desee:
@@ -173,6 +189,7 @@ sv: Välj de optioner du vill ha:
 <tr align=left>
 <td><input type=checkbox name=ad value="on">-ad &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</td>
 <td>[
+co: Cuntrollà i discendenti di tutti l’ascendenti.
 en: Checks descendants of all ascendants .
 fr: Vérifier tous les descendants des ascendants.
 ]</td>
@@ -183,6 +200,7 @@ fr: Vérifier tous les descendants des ascendants.
 <tr align=left>
 <td><input type=checkbox name=d value="on">-d &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</td>
 <td>[
+co: Cuntrollà i discendenti (predefinitu)
 en: Checks descendants (default).
 fr: Vérifier les descendants (par défaut).
 ]</td>
@@ -193,6 +211,8 @@ fr: Vérifier les descendants (par défaut).
 <tr align=left>
 <td><input type=checkbox name=mem value="on">-mem &nbsp;</td>
 <td>[
+co: Risparmià u spaziu di memoria durante l’operazione
+    (ma anderà più pianu).
 de: Während der Operation sparsam mit dem Speicher umgehen
     (ist aber langsamer).
 en: Save memory space during operation (but it will be slower).
@@ -215,6 +235,7 @@ sv: Spara minne under operationen (men det kommer att gå saktare).
 <td>
 <label for="o">-o&nbsp;
 <input type="input" name="o" size="20" maxlength="50" style="padding-left:4px"></label>&nbsp;&nbsp;[
+co: Inversureghja i risultati ver di stu schedariu.
 en: Output results to this file.
 fr: Rediriger les résultats vers ce fichier.
 ]</td>
@@ -223,6 +244,7 @@ fr: Rediriger les résultats vers ce fichier.
 <p>
 <li>
 [
+co: Tandu appughjate nant’à stu buttone :
 de: Dann drücke diesen Knopf:
 en: Then push this button:
 es: Apoye luego en este botón:
@@ -235,6 +257,7 @@ sv: Tryck sedan på denna knapp:
 <p>
 <input type=submit value="[
 [
+co: Paragunà
 en: Compare
 fr: Comparer
 ]">
