--- a/bin/setup/lang/gwf.htm
+++ b/bin/setup/lang/gwf.htm
@@ -8,6 +8,7 @@
   <link rel="shortcut icon" href="images/favicon_gwsetup.png">
 
   <title>[
+co: Parametri
 de: Parameter
 en: Parameters
 es: Parámetros
@@ -24,6 +25,7 @@ sv: parametrar
 <div style="background:url('images/gwlogo.png') no-repeat left top; text-align:center; height:95px; line-height:95px; color:#2f6400;">
 <h1 style="margin:0;">
 [
+co: Parametri
 de: Parameter
 en: Parameters
 es: Parámetros
@@ -41,6 +43,8 @@ sv: Parametrar
 <input type=hidden name=lang value="%l">
 <ul><li>
 [
+co: Selezziunate a vostra basa di dati clicchendu
+    nant’à u buttone assuciatu :
 de: Bitte wähle deine Datenbank mit dem zugehörigen Schalter:
 en: Select your database by clicking on the corresponding button:
 es: Seleccione Ud. su base de datos cliqueando en el botón asociado:
@@ -61,6 +65,7 @@ sv: Välj din databas genom att klicka på motsvarande knapp:
 <td><a href="http://%m:%P/%a">%a</a></td>
 </tr>|
 <tr align=left><td>- [
+co: ùn ci hè alcuna basa di dati à stu mumentu
 de: keine Datenbank vorhanden
 en: there is no database at present
 es: actualmente no existe ninguna base de datos
@@ -74,6 +79,7 @@ sv: det finns ingen databas för tillfället
 <p>
 <li>
 [
+co: Tandu appughjate nant’à stu buttone :
 de: Dann drücke diesen Knopf:
 en: Then push this button:
 es: Apoye a continuación en este botón:
@@ -86,6 +92,7 @@ sv: Tryck sedan på denna knapp:
 <p>
 
 <input type=submit value="[
+co: Cunfigurà
 de: Konfigurieren
 en: Configure
 es: Configurar
