--- a/bin/setup/lang/gwf_ok.htm
+++ b/bin/setup/lang/gwf_ok.htm
@@ -8,6 +8,7 @@
   <link rel="shortcut icon" href="images/favicon_gwsetup.png">
 
   <title>[
+co: Parametri mudificati
 de: Parameter geändert
 en: Parameters updated
 es: Parámetros de actualización
@@ -24,6 +25,7 @@ sv: Parametrar uppdaterade
 <div style="background:url('images/gwlogo.png') no-repeat left top; text-align:center; height:95px; line-height:95px; color:#2f6400;">
 <h1 style="margin:0;">
 [
+co: Parametri mudificati
 de: Parameter geändert
 en: Parameters updated
 es: Parámetros de actualización
@@ -38,6 +40,8 @@ sv: Parametrar uppdaterade
 <p>
 
 [
+co: Eccu un accessu à a vostra basa di dati per pruvà
+    i vostri cambiamenti di parametri :
 de: Hier kannst du deine Parameteränderung ausprobieren:
 en: Here is an access to your database in order to test your parameters
     changing:
@@ -62,6 +66,7 @@ sv: Här är en åtkomst till din databas för att testa dina parametrar:
 <p>
 
 [
+co: Per infurmazione :
 de: Zu deiner Information:
 en: For information:
 es: Por información:
@@ -74,6 +79,8 @@ sv: För information:
 <ul>
 
 <li>[
+co: I parametri sò arregistrati in u schedariu
+    di testu « %a.gwf » in u cartulare « %w ».
 de: Die Parameter sind in der Textdatei "%a.gwf" im Verzeichnis "%w".
 en: The parameters are recorded in the text file "%a.gwf" in the
     directory "%w".
@@ -88,6 +95,9 @@ sv: Parametrarna har sparats i textfilen "%a.gwf" i katalogen "%w".
 ]
 
 <li>[
+co: S’è vò avete datu un testu à piazzà à u bassu di e pagine,
+    stu testu serà arregistratu in u schedariu di nome « %a.trl »
+	in u sottu-cartulare « lang » di u cartulare « %w ».
 de: Falls du einen Text angegeben hast, der am Fuß der Seiten angezeigt
     werden soll, wurde er in der Datei "%a.trl" im Unterverzeichnis "lang"
     des Verzeichnisses "%w" gespeichert.
@@ -115,6 +125,8 @@ sv: Om du angav en text som ska stå längst ner på sidan, har denna text
 <p>
 
 [
+co: Pudete rivene à u <a href="gwsetup?lang=%l;v=welcome.htm">listinu
+    principale</a>.
 de: Zurück zum <a href="gwsetup?lang=%l;v=welcome.htm">Hauptmenü</a>.
 en: You can return to the <a href="gwsetup?lang=%l;v=welcome.htm">main menu</a>.
 es: Ud. puede regresar al <a href="gwsetup?lang=%l;v=welcome.htm">menú
