--- a/bin/setup/lang/gwfix.htm
+++ b/bin/setup/lang/gwfix.htm
@@ -8,6 +8,7 @@
   <link rel="shortcut icon" href="images/favicon_gwsetup.png">
 
   <title>[
+co: Riparà una basa è ricalculeghja l’indice
 en: Fix base and recompute index
 fr: Corrige une base et reclacule l'index
 ]</title>
@@ -19,6 +20,7 @@ fr: Corrige une base et reclacule l'index
 <div style="background:url('images/gwlogo.png') no-repeat left top; text-align:center; height:95px; line-height:95px; color:#2f6400;">
 <h1 style="margin:0;">
 [
+co: Riparà una basa è ricalculeghja l’indice
 en: Fix base and recompute index
 fr: Corrige une base et reclacule l'index
 ]
@@ -34,6 +36,7 @@ fr: Corrige une base et reclacule l'index
 <td>
 <ul><li>
 [
+co: Selezziunate a vostra basa di dati :
 en: Select your base:
 fr: Sélectionnez la base de données :
 ]
@@ -44,6 +47,7 @@ fr: Sélectionnez la base de données :
 <td><input type="radio" name="anon" value="%a">   </td>
 <td>%a</td></tr>|
 <tr align=left><td>- [
+co: ùn ci hè alcuna basa di dati à stu mumentu
 de: keine Datenbank vorhanden
 en: there is no database at present
 es: actualmente ninguna base de datos existe
@@ -58,6 +62,7 @@ sv: det finns ingen databas för tillfället
 <p>
 <li>
 [
+co: Selezziunate l’ozzioni chì vò vulete :
 de: Wähle die gewünschten Optionen:
 en: Select the options you want:
 es: Seleccione las opciones que Ud. desee:
@@ -67,6 +72,7 @@ lv: Izvçlieties atbilstoðos parametrus:
 sv: Välj de optioner du vill ha:
 ]<br>
 [
+co: (ùn ci hè nisuna ozzione per tutte selezziunalle).
 en: (no selection is equivalent to select all).
 fr: (aucune option est équivalent à les sélectionner toutes). 
 ]
@@ -76,6 +82,7 @@ fr: (aucune option est équivalent à les sélectionner toutes).
 <tr align=left>
 <td><input type="checkbox" name="dry-run" value="on">   </td>
 <td>[
+co: ùn micca effettuà i cambiamenti (solu in e traccie).
 en: do not commit changes (only traces).
 fr: ne pas effectuer les changements (traces seules).
 ]</td>
@@ -86,6 +93,7 @@ fr: ne pas effectuer les changements (traces seules).
 <tr align="left">
 <td><input type="checkbox" name="q" value="on">   </td>
 <td>[
+co: poche traccie.
 en: quiet mode.
 fr: peu de traces.
 ]</td>
@@ -96,6 +104,7 @@ fr: peu de traces.
 <tr align="left">
 <td><input type="checkbox" name="qq" value="on">   </td>
 <td>[
+co: manc’appena traccie.
 en: very quiet mode.
 fr: pas de traces du tout.
 ]</td>
@@ -106,6 +115,7 @@ fr: pas de traces du tout.
 <tr align="left">
 <td><input type="checkbox" name="fast" value="on">   </td>
 <td>[
+co: modu rapidu. Richiede più di memoria
 en: fast mode. Needs more memory
 fr: mode rapide. Nécessite plus de mémoire.
 ]</td>
@@ -116,6 +126,7 @@ fr: mode rapide. Nécessite plus de mémoire.
 <tr align="left">
 <td><input type="checkbox" name="families-parents" value="on">   </td>
 <td>[
+co: Genitori di famiglie.
 en: families' parents.
 fr: families' parents.
 ]</td>
@@ -126,6 +137,7 @@ fr: families' parents.
 <tr align="left">
 <td><input type="checkbox" name="families-children" value="on">   </td>
 <td>[
+co: Zitelli di famiglie.
 en: families' children.
 fr: families' children.
 ]</td>
@@ -196,6 +208,7 @@ fr: marriage divorce.
 <tr align="left">
 <td><input type="checkbox" name="index" value="on">   </td>
 <td>[
+co: indice. Attivatu autumaticamente da l’altre ozzioni
 en: index. Automatically enabled by any other option
 fr: index. Activé automatiquement par les autres options
 ]</td>
@@ -206,6 +219,7 @@ fr: index. Activé automatiquement par les autres options
 <tr align="left">
 <td><input type="checkbox" name="help" value="on">   </td>
 <td>[
+co: aiutu.
 en: help.
 fr: help.
 ]</td>
@@ -215,6 +229,7 @@ fr: help.
 
 <li>
 [
+co: Tandu appughjate nant’à stu buttone :
 de: Dann drücke diesen Knopf:
 en: Then push this button:
 es: Apoye luego en este botón:
@@ -227,6 +242,7 @@ sv: Tryck sedan på denna knapp:
 <p>
 <input type="submit" value="[
 [
+co: Riparà una basa
 en: Fix base
 fr: Fix base
 ]">
