--- a/bin/setup/lang/gwfix_ok.htm
+++ b/bin/setup/lang/gwfix_ok.htm
@@ -8,6 +8,7 @@
   <link rel="shortcut icon" href="images/favicon_gwsetup.png">
 
   <title>[
+co: Messaghji gwfixbase
 en: Gwfixbase messages
 fr: Messages gwfixbase
 ]</title>
@@ -19,6 +20,7 @@ fr: Messages gwfixbase
 <div style="background:url('images/gwlogo.png') no-repeat left top; text-align:center; height:95px; line-height:95px; color:#2f6400;">
 <h1 style="margin:0;">
 [
+co: Messaghji gwfixbase
 en: Gwfixbase messages
 fr: Messages gwfixbase
 ]
@@ -27,12 +29,15 @@ fr: Messages gwfixbase
 
 <p />
 [
+co: Eccu. L’operazione hè compia.
 en: Done. The operation is terminated.
 fr: L’opération est terminée.
 ]
 
 <p />
 [
+co: Pudete rivene dinù à u <a href="gwsetup?lang=%l;v=welcome.htm">listinu
+    principale</a>.
 de: Zurück zum <a href="gwsetup?lang=%l;v=welcome.htm">Hauptmenü</a>.
 en: You can also return to the <a href="gwsetup?lang=%l;v=welcome.htm">main
     menu</a>.
@@ -52,6 +57,7 @@ sv: Du kan också återvända till <a
 <br /><p />
 
 [
+co: Cliccà <a href="gwsetup?lang=%l;v=bso_comm.htm">quì</a> per i risultati in « comm.log » :
 en: Click <a href="gwsetup?lang=%l;v=bso_comm.htm">here</a> for the results in "comm.log":
 fr: Cliquer <a href="gwsetup?lang=%l;v=bso_comm.htm">ici</a> pour les résultats dans "comm.log".
 ]
