--- a/bin/setup/lang/gwu_ok.htm
+++ b/bin/setup/lang/gwu_ok.htm
@@ -8,6 +8,7 @@
   <link rel="shortcut icon" href="images/favicon_gwsetup.png">
 
   <title>[
+co: Operazione compia
 de: Operation durchgeführt
 en: Operation completed
 es: Operación terminada
@@ -24,6 +25,7 @@ sv: Operationen klar
 <div style="background:url('images/gwlogo.png') no-repeat left top; text-align:center; height:95px; line-height:95px; color:#2f6400;">
 <h1 style="margin:0;">
 [
+co: Operazione compia
 de: Operation durchgeführt
 en: Operation completed
 es: Operación terminada
@@ -38,6 +40,8 @@ sv: Operationen klar
 <p>
 
 [
+co: L’estrazzione di u schedariu di fonte <font color=#2f6400><b>GeneWeb</b></font>
+    hè compia.
 de: Die Extraktion der <font color=#2f6400><b>GeneWeb</b></font>-Quelldatei
     ist beendet.
 en: The extraction of the <font color=#2f6400><b>GeneWeb</b></font> source
@@ -56,6 +60,11 @@ sv: Exporteringen av <font color=#2f6400><b>GeneWeb</b></font> källfilen
 <p>
 %Iodir;.;{
 [
+co: I schedarii sò stati ricustituiti in u cartulare d’origine.<br>
+    I novi dati senza schedariu d’origine sò stati inversiati ver di
+	u schedariu %o o ver di comm.log.
+	Tocca à voi d’amministrà stu novu schedariu .gw o d’aghjunghje
+	sti dati à i schedarii esistente.
 en: Files were reconstructed in the original sources directory.<br>
     Data created without origin file has been directed to the file
     %o or to comm.log.
@@ -69,6 +78,7 @@ fr: Les fichiers ont été reconstitués dans le dossier d'origine.<br>
 
 |
 [
+co: Què hà custruitu un schedariu chjamatu « %o ».
 de: Es wurde eine Daten namens "%o" erzeugt.
 en: This has built a file named "%o".
 es: Esta operación ha creado un fichero de nombre "%o".
@@ -81,6 +91,7 @@ sv: Den har skapat en fil benämnd "%o".
 <p>
 
 [
+co: Stu schedariu si trova in u cartulare « %w »
 de: Diese Datei steht im Verzeichnis "%w".
 en: This file is in the directory "%w".
 es: Este fichero se encuentra en la carpeta "%w".
@@ -93,6 +104,7 @@ it: Questo file si trova nella directory "%w".
 Comm.log:
 <pre>
 %g{- [
+co: schedariu viotu
 de: empty file
 en: empty file
 es: fichero vacio
@@ -106,6 +118,8 @@ lv: datne ir tukða
 </pre>
 <p>
 [
+co: Pudete rivene à u <a href="gwsetup?lang=%l;v=welcome.htm">listinu
+    principale</a>.
 de: Zurück zum <a href="gwsetup?lang=%l;v=welcome.htm">Hauptmenü</a>.
 en: You can return to the <a href="gwsetup?lang=%l;v=welcome.htm">main menu</a>.
 es: Si Ud. lo desea, regrese al
