--- a/bin/setup/lang/list.htm
+++ b/bin/setup/lang/list.htm
@@ -8,6 +8,7 @@
   <link rel="shortcut icon" href="images/favicon_gwsetup.png">
 
   <title>[
+co: Base di dati
 de: Databases
 en: Databases
 es: Bases de datos
@@ -25,6 +26,7 @@ sv: Databaser
 <div style="background:url('images/gwlogo.png') no-repeat left top; text-align:center; height:95px; line-height:95px; color:#2f6400;">
 <h1 style="margin:0;">
 [
+co: Base di dati
 de: Datenbanken
 en: Databases
 es: Bases de datos
@@ -40,6 +42,8 @@ sv: Databaser
 <p />
 
 [
+co: Per cunsultalla, assicuratevi chì u
+    <a href="http://%m:%P/gwsetup?lang=%l;v=gwd_info.htm">serviziu gwd</a> sia lanciatu.
 de: Um eine Datenbank abfragen zu können, muß der <a
     href="http://%m:%z/gwsetup?lang=%l;v=gwd_info.htm">gwd-Dienst</a>  gestartet worden
     sein.
@@ -65,6 +69,7 @@ sv: För att konsultera en databas, måste <a
 
 %b{<li><a href="http://%m:%P/%a?lang=%l">%a</a>|
 <li>[
+co: ùn ci hè alcuna basa di dati à stu mumentu
 de: keine Datenbank vorhanden
 en: there is no database at present
 es: ninguna base de datos existe actualmente
@@ -79,6 +84,7 @@ sv: det finns ingen databas för närvarande
 
 <p />
 [
+co: O rivinite à u <a href="http://%m:%z/gwsetup?lang=%l;v=welcome.htm">listinu principale</a>.
 de: Zurück zum <a href="http://%m:%z/gwsetup?lang=%l;v=welcome.htm">Hauptmenü</a>.
 en: Or go back to the <a href="http://%m:%z/gwsetup?lang=%l;v=welcome.htm">main menu</a>.
 es: O regrese Ud. al <a href="http://%m:%z/gwsetup?lang=%l;v=welcome.htm">menú
