--- a/bin/setup/lang/main.htm
+++ b/bin/setup/lang/main.htm
@@ -8,6 +8,7 @@
   <link rel="shortcut icon" href="images/favicon_gwsetup.png">
 
   <title>Gwsetup - [
+co: Listinu principale
 de: Hauptmenü
 en: Main menu
 es: Menú principal
@@ -23,6 +24,7 @@ sv: Huvudmeny
 <body %Vbody_prop;>
 
 <center><h1><font color=#2f6400>Gwsetup - [
+co: Listinu principale
 de: Hauptmenü
 en: Main menu
 es: Menú principal
@@ -36,6 +38,7 @@ sv: Huvudmeny
 <p />
 
 <b>[
+co: Cunsultà…
 de: Betrachte…
 en: Consult…
 es: Consultar…
@@ -51,6 +54,8 @@ sv: Konsultera…
 <ul>
 
 <li>[
+co: e <a href="gwsetup?lang=%l;v=list.htm">base di
+    dati</a> esistente
 de: die bestehenden <a href="gwsetup?lang=%l;v=list.htm">Datenbanken</a>
 en: the existing <a href="gwsetup?lang=%l;v=list.htm">databases</a>
 es: las <a href="gwsetup?lang=%l;v=list.htm">bases de datos</a> existentes
@@ -64,6 +69,8 @@ sv: de existerande <a href="gwsetup?lang=%l;v=list.htm">databaserna</a>
 ]
 
 <li>[
+co: e <a href="gwsetup?lang=%l;v=traces.htm">traccie di
+    l’ultima cumanda passata</a>.
 de: die <a href="gwsetup?lang=%l;v=traces.htm">Trace-Ausgaben des
     letzten Kommandos</a>.
 en: the <a href="gwsetup?lang=%l;v=traces.htm">traces of the
@@ -85,6 +92,7 @@ sv: <a href="gwsetup?lang=%l;v=traces.htm">utskrifterna från
 <p />
 
 <b>[
+co: Creà una basa di dati…
 de: Lege eine Datenbank an…
 en: Create a database…
 es: Crear una base de datos…
@@ -100,6 +108,8 @@ sv: Skapa en databas…
 <ul>
 
 <li>[
+co: cù a <a href="gwsetup?lang=%l;v=simple.htm">metoda
+    simplice</a>
 de: mit der <a href="gwsetup?lang=%l;v=simple.htm">einfachen Methode</a>
 en: with the <a href="gwsetup?lang=%l;v=simple.htm">simple method</a>
 es: con el <a href="gwsetup?lang=%l;v=simple.htm">método simple</a>
@@ -113,6 +123,8 @@ sv: med en <a href="gwsetup?lang=%l;v=simple.htm">enkel metod</a>
 ]
 
 <li>[
+co: à partesi d’un <a
+    href="gwsetup?lang=%l;v=ged2gwb.htm">schedariu GEDCOM</a>
 de: aus einer <a href="gwsetup?lang=%l;v=ged2gwb.htm">GEDCOM-Datei</a>
 en: from a <a href="gwsetup?lang=%l;v=ged2gwb.htm">GEDCOM file</a>
 es: a partir de un <a href="gwsetup?lang=%l;v=ged2gwb.htm">fichero GEDCOM</a>
@@ -126,6 +138,8 @@ sv: från en <a href="gwsetup?lang=%l;v=ged2gwb.htm">GEDCOM-fil</a>
 ]
 
 <li>[
+co: à partesi d’un <a
+    href="gwsetup?lang=%l;v=ged2gwb2.htm">schedariu GEDCOM (ged2gwb2)</a>
 de: aus einer <a href="gwsetup?lang=%l;v=ged2gwb2.htm">GEDCOM-Datei (ged2gwb2)</a>
 en: from a <a href="gwsetup?lang=%l;v=ged2gwb2.htm">GEDCOM file (ged2gwb2)</a>
 es: a partir de un <a href="gwsetup?lang=%l;v=ged2gwb2.htm">fichero GEDCOM (ged2gwb2)</a>
@@ -139,6 +153,8 @@ sv: från en <a href="gwsetup?lang=%l;v=ged2gwb2.htm">GEDCOM-fil (ged2gwb2)</a>
 ]
 
 <li>[
+co: à partesi d’un <a href="gwsetup?lang=%l;v=gwc.htm">schedariu
+    di fonte GeneWeb</a>
 de: aus einer <a href="gwsetup?lang=%l;v=gwc.htm">GeneWeb-Quelldatei</a>
 en: from a <a href="gwsetup?lang=%l;v=gwc.htm">GeneWeb source file</a>
 es: a partir de un <a href="gwsetup?lang=%l;v=gwc.htm">fichero fuente
@@ -153,6 +169,8 @@ sv: från en <a href="gwsetup?lang=%l;v=gwc.htm">GeneWeb källfil</a>
 ]
 
 <li>[
+co: à partesi d’un <a href="gwsetup?lang=%l;v=gwc2.htm">schedariu
+    di fonte GeneWeb (gwc2)</a>
 de: aus einer <a href="gwsetup?lang=%l;v=gwc2.htm">GeneWeb-Quelldatei (gwc2)</a>
 en: from a <a href="gwsetup?lang=%l;v=gwc2.htm">GeneWeb source file (gwc2)</a>
 es: a partir de un <a href="gwsetup?lang=%l;v=gwc2.htm">fichero fuente
@@ -171,6 +189,7 @@ sv: från en <a href="gwsetup?lang=%l;v=gwc2.htm">GeneWeb källfil (gwc2)</a>
 <p />
 
 <b>[
+co: Estrae d’una basa di dati…
 de: Extrahiere aus einer Datenbank…
 en: Extract from a database…
 es: Extraer de una base de datos…
@@ -186,6 +205,7 @@ sv: Exportera från en databas…
 <ul>
 
 <li>[
+co: un <a href="gwsetup?lang=%l;v=gwb2ged.htm">schedariu GEDCOM</a>
 de: eine <a href="gwsetup?lang=%l;v=gwb2ged.htm">GEDCOM-Datei</a>
 en: a <a href="gwsetup?lang=%l;v=gwb2ged.htm">GEDCOM file</a>
 es: un <a href="gwsetup?lang=%l;v=gwb2ged.htm">fichero GEDCOM</a>
@@ -197,6 +217,7 @@ sv: en <a href="gwsetup?lang=%l;v=gwb2ged.htm">GEDCOM-fil</a>
 ]
 
 <li>[
+co: un <a href="gwsetup?lang=%l;v=gwu.htm">schedariu di fonte GeneWeb</a>
 de: eine <a href="gwsetup?lang=%l;v=gwu.htm">GeneWeb-Quelldatei</a>
 en: a <a href="gwsetup?lang=%l;v=gwu.htm">GeneWeb source file</a>
 es: un <a href="gwsetup?lang=%l;v=gwu.htm">fichero fuente GeneWeb</a>
@@ -212,6 +233,7 @@ sv: en <a href="gwsetup?lang=%l;v=gwu.htm">GeneWeb källfil</a>
 <p />
 
 <b>[
+co: Appiecà nant’à una basa di dati…
 de: Funktion auf eine Datenbank anwenden….
 en: Apply on a database…
 es: Aplicar a una base de datos…
@@ -227,6 +249,7 @@ sv: Applicera på en databas…
 <ul>
 
 <li>[
+co: a <a href="gwsetup?lang=%l;v=cleanup.htm">nettata</a>
 de: <a href="gwsetup?lang=%l;v=cleanup.htm">Aufräumen</a>
 en: the <a href="gwsetup?lang=%l;v=cleanup.htm">cleaning up</a>
 es: una <a href="gwsetup?lang=%l;v=cleanup.htm">limpieza</a>
@@ -238,6 +261,7 @@ sv: <a href="gwsetup?lang=%l;v=cleanup.htm">upprensning</a>
 ]
 
 <li>[
+co: u <a href="gwsetup?lang=%l;v=rename.htm">cambiamentu di nome</a>
 de: <a href="gwsetup?lang=%l;v=rename.htm">Umbenennen</a>
 en: the <a href="gwsetup?lang=%l;v=rename.htm">renaming</a>
 es: un <a href="gwsetup?lang=%l;v=rename.htm">cambio de nombre</a>
@@ -249,6 +273,7 @@ sv: <a href="gwsetup?lang=%l;v=rename.htm">omdöpning</a>
 ]
 
 <li>[
+co: a <a href="gwsetup?lang=%l;v=delete.htm">squassatura</a>
 de: <a href="gwsetup?lang=%l;v=delete.htm">Löschen</a>
 en: the <a href="gwsetup?lang=%l;v=delete.htm">deletion</a>
 es: una <a href="gwsetup?lang=%l;v=delete.htm">supresión</a>
@@ -260,6 +285,7 @@ sv: <a href="gwsetup?lang=%l;v=delete.htm">radering</a>
 ]
 
 <li>[
+co: a <a href="gwsetup?lang=%l;v=merge.htm">fusione</a> cù d’altre base di dati
 de: <a href="gwsetup?lang=%l;v=merge.htm">Zusammenführen</a> mit
     anderen Datenbanken
 en: the <a href="gwsetup?lang=%l;v=merge.htm">merging</a> with other databases
@@ -272,6 +298,7 @@ sv: <a href="gwsetup?lang=%l;v=merge.htm">sammanslagning</a> med andra
 ]
 
 <li>[
+co: a <a href="gwsetup?lang=%l;v=save.htm">salvaguardia è a resturazione</a>
 de: <a href="gwsetup?lang=%l;v=save.htm">Sichern und Restaurieren</a>
 en: the <a href="gwsetup?lang=%l;v=save.htm">saving and restoring</a>
 es: una <a href="gwsetup?lang=%l;v=save.htm">copia de seguridad y una
@@ -284,6 +311,8 @@ sv: <a href="gwsetup?lang=%l;v=save.htm">spara och återskapa</a>
 ]
 
 <li>[
+co: u <a href="gwsetup?lang=%l;v=consang.htm">prugramma d’iniziu
+    di e cunsanguinità</a>
 de: <a href="gwsetup?lang=%l;v=consang.htm">Initialisierung der
     Blutsverwandtschaften</a>
 en: the <a href="gwsetup?lang=%l;v=consang.htm">initialisation of
@@ -301,6 +330,8 @@ sv: <a href="gwsetup?lang=%l;v=consang.htm">beräkning av
 ]
 
 <li>[
+co: l’<a href="gwsetup?lang=%l;v=update_nldb.htm">attualizazione
+    di i liami scheda / cronaca famigliale</a> (update_nldb)
 de: <a href="gwsetup?lang=%l;v=update_nldb.htm">update_nldb</a>
 en: <a href="gwsetup?lang=%l;v=update_nldb.htm">update_nldb</a>
 es: <a href="gwsetup?lang=%l;v=update_nldb.htm">update_nldb</a>
@@ -316,6 +347,7 @@ sv: <a href="gwsetup?lang=%l;v=update_nldb.htm"update_nldb></a>
 <p />
 
 <b>[
+co: Configurà…
 de: Konfiguriere…
 en: Configure…
 es: Configurar…
@@ -331,6 +363,8 @@ sv: Konfigurera…
 <ul>
 
 <li>[
+co: i parametri d’una <a href="gwsetup?lang=%l;v=gwf.htm">basa
+    di dati</a>
 de: die Parameter einer <a href="gwsetup?lang=%l;v=gwf.htm">Datenbank</a>
 en: the parameters of a <a href="gwsetup?lang=%l;v=gwf.htm">database</a>
 es: los parámetros de una <a
@@ -345,6 +379,8 @@ sv: parametrarna för en <a href="gwsetup?lang=%l;v=gwf.htm">databas</a>
 ]
 
 <li>[
+co: i parametri di u <a href="gwd?lang=%l;v=gwd.htm">serviziu
+    gwd</a>
 de: die Parameter des <a href="gwd?lang=%l;v=gwd.htm">gwd-Dienstes</a>
 en: the parameters of the <a href="gwd?lang=%l;v=gwd.htm">gwd service</a>
 es: los parámetros de un <a href="gwd?lang=%l;v=gwd.htm">servicio
@@ -365,6 +401,7 @@ sv: parametrarna för <a href="gwd?lang=%l;v=gwd.htm">gwd servicen</a>
 <br />
 
 [
+co: … o rivinite à a <a href="%l">pagina d’accolta</a> di « gwsetup »
 de: … oder gehe zurück auf die <a
     href="%l">Installations-Startseite</a>.
 en: … or go back to the <a href="%l">welcome page</a> of "gwsetup"
@@ -381,6 +418,9 @@ sv: … eller gå tillbaka till <a href="%l">välkomstsidan</a> för "gwsetup"
 <br />
 
 [
+co: … o cunsultate a <a
+    href="http://geneweb.tuxfamily.org/wiki/GeneWeb" target="_blank">documentazione</a> sana di
+	<font color=#2f6400><b>GeneWeb</b></font>.
 de: … oder schaue in die vollständige <b><font
     color=#2f6400>GeneWeb</font></b>-<a
     href="http://geneweb.tuxfamily.org/wiki/GeneWeb" target="_blank">Dokumentation</a>
