--- a/bin/setup/lang/merge.htm
+++ b/bin/setup/lang/merge.htm
@@ -7,6 +7,7 @@
   <link rel="shortcut icon" href="images/favicon_gwsetup.png">
 
   <title>[
+co: Fusione di base di dati
 de: Datenbanken zusammenführen
 en: Merging databases
 fr: Fusion de bases de données
@@ -21,6 +22,7 @@ sv: Sammanslagning av databaser
 <div style="background:url('images/gwlogo.png') no-repeat left top; text-align:center; height:95px; line-height:95px; color:#2f6400;">
 <h1 style="margin:0;">
 [
+co: Fusione di base di dati
 de: Datenbanken zusammenführen
 en: Merging databases
 fr: Fusion de généalogies
@@ -34,6 +36,8 @@ sv: Sammanslagning av databaser
 <input type=hidden name=lang value="%l">
 
 [
+co: In primu locu, tutte e vostre base à unisce devenu esse sottu à
+    <b><font color=#2f6400>GeneWeb</font></b>.
 de: Alle Datenbanken, die zusammengeführt werden sollen,
     müssen unter <b><font color=#2f6400>GeneWeb</font></b>
     verfügbar sein.
@@ -48,6 +52,10 @@ sv: Alla databaser som ska slås samman måste finnas under
 ]
 <p>
 [
+co: S’è ùn hè micca u casu, per indettu, s’è certe trà elle
+    sò in u furmatu GEDCOM o schedarii di fonte GeneWeb, rivinite à u <a
+	href="gwsetup?lang=%l;v=welcome.htm">listinu principale</a> per crealle cù
+	<b><font color=#2f6400>GeneWeb</font></b>, è tandu rivinite à sta pagina.
 de: Falls das nicht der Fall ist, sondern einige von ihnen z.B. nur
     als GEDCOM-Dateien oder GeneWeb-Quelldateien vorliegen, kehre zum
     <a href="gwsetup?lang=%l;v=welcome.htm">Hauptmenü</a> zurück,
@@ -76,6 +84,8 @@ sv: Om det inte är så, om till exempel, någon av dem bara är GEDCOM
 <p>
 <ul><li>
 [
+co: Quandu hè fattu, selezziunate e base di dati ch’ellu ci vole à unisce
+    clicchendu nant’à u so buttone assuciatu :
 de: Wenn das geschehen ist, wähle die Datenbanken, die du
     zusammenführen möchtest:
 en: Once done, select the databases you want to merge by pushing their
@@ -95,6 +105,7 @@ sv: När du är klar, välj de databaser du vill slå samman genom att klicka
 <td><input type=checkbox name="%a" value="on_"></td>
 </tr>|
 <tr align=left><td>- [
+co: ùn ci hè alcuna basa di dati à stu mumentu
 de: keine Datenbank vorhanden
 en: there is no database at present
 fr: il n’y a aucune base de données actuellement
@@ -105,6 +116,8 @@ sv: det finns ingen databas för närvarande
 <p>
 <li>
 [
+co: Scrivite u nome chì vò vulete dà à a vostra basa di
+    dati risultante :
 de: Gib den Namen ein, den du deiner resultierenden Datenbank geben
     willst:
 en: Indicate the name you want to give to your resulting database:
@@ -119,6 +132,7 @@ sv: Skriv namnet du vill ge din databas:
 <p>
 <li>
 [
+co: Tandu appughjate nant’à stu buttone :
 de: Dann drücke diesen Knopf:
 en: Then push this button:
 fr: Puis appuyez sur ce bouton :
@@ -127,6 +141,7 @@ sv: Tryck sedan denna knapp:
 ]
 <p>
 <input type=submit value="[
+co: Fusione
 de: Zusammenführen
 en: Merge
 fr: Fusionner
@@ -137,6 +152,11 @@ sv: Slåsamman
 </form>
 <p>
 [
+co: Rimarca : a fusione hè solu u cuncatinamentu simplice
+    di e base di dati. Ùn ci hè micca ricerca di persone
+	identiche. Dopu a fusione, duverete circà e persone
+	o e famiglie in doppiu è uniscele.
+	Fighjate a <a href="doc/%l/update.htm#MrgP">documentazione</a>.
 de: Bemerkung: Das Zusammenführen geschieht durch simple
     Konkatenation der Datenbanken. Es wird keine Überprüfung
     auf identische Personen durchgeführt. Nach dem
