--- a/bin/setup/lang/merge_1.htm
+++ b/bin/setup/lang/merge_1.htm
@@ -8,6 +8,7 @@
   <link rel="shortcut icon" href="images/favicon_gwsetup.png"%/>
 
   <title>[
+co: Fusione di base di dati
 de: Datenbanken zusammenführen
 en: Merging databases
 fr: Fusion de bases de données
@@ -22,6 +23,7 @@ sv: Sammanslagning av databaser
 <div style="background:url('images/gwlogo.png') no-repeat left top; text-align:center; height:95px; line-height:95px; color:#2f6400;">
 <h1 style="margin:0;">
 [
+co: Fusione di base di dati
 de: Datenbanken zusammenführen
 en: Merging databases
 fr: Fusion de bases  de données
@@ -34,6 +36,9 @@ sv: Sammanslagning av databaser
 <p>
 
 %v{<b>[
+co: Avertimentu</b> : una basa di dati chjamata « %o » esiste dighjà
+    in u vostru <a href="gwsetup?lang=%l;v=list.htm">cartulare</a>. S’è vò primete
+	nant’à u buttone « Vai » quaghjò, sta genealugia serà squassata.
 de: Warnung</b>: Es existiert bereits eine Datenbank mit dem Namen "%o" 
     in deinem <a href="gwsetup?lang=%l;v=list.htm">Verzeichnis</a>. 
     Wenn Du den "Ok"-Knopf unten drückst, wird diese
@@ -54,6 +59,10 @@ sv: Varning</b>: det finns redan en databas med namnet "%o" i din
 ]<p>
 
 [
+co: S’è vò avete dighjà fattu st’azzione, forse ghjè
+    u so risultatu, è dunque ùn hè micca impurtante.
+	S’è vò primete nant’à u buttone « Vai » quaghjò,
+	sta genealugia serà squassata.
 de: Wenn du diese Operation gerade schonmal durchgeführt hat, war das 
     wahrscheinlich das Ergebnis, und ist dann unwichtig. Andernfalls
     kehre auf die vorherige Seite zurück und wähle einen
@@ -76,6 +85,8 @@ sv: Om du just gjorde detta, är den nu nog raderad och därför är det
 <p>
 
 [
+co: Avemu da creà una basa di dati chì si chjama « %o » à partesi
+    di ste base di dati :
 de: Wir legen nun eine Datenbank namens "%o" aus den folgenden
     Datenbanken an:
 en: We are going to create a database named "%o" from the following databases:
@@ -92,6 +103,9 @@ sv: Vi ska skapa en databas med namn "%o" från de följande databaser:
 <p>
 
 [
+co: Rimarca : st’operazione pò fassi in furia o piglià
+    qualchì decine di seconda o parechji minuti
+	secondu à u casu. Aspettate per piacè.
 de: Bemerkung: Diese Operation kann entweder innerhalb eines
     Augenzwinkerns erledigt sein, oder aber einige Zehntelsekunden oder
     mehrere Minuten dauern, abhängig vom jeweiligen Fall. Bitte sei
@@ -111,13 +125,16 @@ sv: Obs: denna operation kan gå blixtsnabbt eller ta tiotalet
 <p>
 
 [
+co: Primete nant’à u buttone quaghjò per creà a vostra basa di dati
 de: Drücke den Knopf unten um deine Datenbank anzulegen
 en: Push the button below to create your database
 fr: Appuyez sur le bouton ci-dessous pour créer votre base de
     données
 it: Cliccate sul bottone qui sotto per creare la vostra base di dati
 sv: Klicka knappen nedan för att skapa din databas
-]%v{<br><blink><font color=red>[
+]%v{<br><blink><font color=red>
+[
+co:  è rimpiazzà a basa « %o » in u cartulare di destinazione
 de:  und die vorige Datenbank "%o" im Zielverzeichnis zu überschreiben
 en: , and overwrite the previous database "%o" of the target directory
 fr:  et écraser la base "%o" du répertoire d’arrivée
@@ -138,6 +155,7 @@ sv:  och skriva över den tidigare databasen "%o" i mål katalogen
 <p>
 
 [
+co: Per a vostra infurmazione, st’operazione currisponde à sta seguita di cumande :
 de: Zur Information: Diese Operation entspricht folgenden Kommandos:
 en: For information, this operation corresponds to the following commands:
 fr: Pour information, cette opération correspond à la suite
