--- a/bin/setup/lang/recover.htm
+++ b/bin/setup/lang/recover.htm
@@ -8,6 +8,7 @@
   <link rel="shortcut icon" href="images/favicon_gwsetup.png">
 
   <title>[
+co: Ricuperà una basa di dati - Fasa 1
 de: Eine bestehende Datenbank übernehmen - Phase 1
 en: Recover a database - Phase 1
 es: Recuperar una base - Fase 1
@@ -24,6 +25,7 @@ sv: Återskapa en databas - fas 1
 <div style="background:url('images/gwlogo.png') no-repeat left top; text-align:center; height:95px; line-height:95px; color:#2f6400;">
 <h1 style="margin:0;">
 [
+co: Ricuperà una basa di dati
 de: Eine bestehende Datenbank übernehmen
 en: Recover a database
 es: Recuperar una base
@@ -41,6 +43,9 @@ sv: Återskapa en databas
 <input type=hidden name=lang value="%l">
 
 [
+co: Selezziunate u nome di u <em>cartulare</em> induve si trova
+    a vostra vechja versione di <font color=#2f6400><b>GeneWeb</b></font> (chì deve
+	cuntene un schedariu chjamatu <tt>gwu</tt> o <tt>gwu.exe</tt>).
 de: Gib den vollständigen Namen des <em>Verzeichnisses</em> an, in dem
     deine alte <font color=#2f6400><b>GeneWeb</b></font>-Version installiert
     ist.
@@ -69,6 +74,7 @@ sv: Skriv in hela namnet för <em>katalogen</em> där din gamla version av
 <p>
 
 [
+co: Tandu appughjate nant’à stu buttone :
 de: Dann drücke diesen Knopf:
 en: Then push this button:
 es: Apoye luego en este botón:
@@ -81,6 +87,7 @@ sv: Tryck sedan på knappen:
 <p>
 
 <input type=submit value="[
+co: Ricerca
 de: Suchen
 en: Search
 es: Buscar
