--- a/bin/setup/lang/recover1.htm
+++ b/bin/setup/lang/recover1.htm
@@ -8,6 +8,7 @@
   <link rel="shortcut icon" href="images/favicon_gwsetup.png">
 
   <title>[
+co: Ricuperà una basa di dati - Fasa 2
 de: Eine bestehende Datenbank übernehmen - Phase 2
 en: Recover a database - Phase 2
 es: Recuperar una base - Fase 2
@@ -23,6 +24,7 @@ sv: Återskapa en databas - fas 2
 <div style="background:url('images/gwlogo.png') no-repeat left top; text-align:center; height:95px; line-height:95px; color:#2f6400;">
 <h1 style="margin:0;">
 [
+co: Ricuperà una basa di dati
 de: Eine bestehende Datenbank übernehmen
 en: Recover a database
 es: Recuperar una base
@@ -37,6 +39,7 @@ sv: Återskapa en databas
 <br><p>
 
 [
+co: Cartulare
 de: Verzeichnis
 en: Directory
 es: Carpeta:
@@ -51,6 +54,7 @@ sv: Katalog
 </pre>
 
 [
+co: Selezziunate a basa di dati ch’ellu ci vole à ricuperà :
 de: Wähle die Datenbank, die du übernehmen möchtest:
 en: Select the database you want to recover:
 es: Seleccione Ud. la base que desea recuperar:
@@ -70,6 +74,7 @@ sv: Välj den databas du vill återskapa:
 
 %y{<tr><td><input type=radio name=i value="%a"></td><td> %a </td></tr>|
 <tr><td>- [
+co: ùn ci hè alcuna basa di dati in stu cartulare
 de: keine Datenbanken in diesem Verzeichnis gefunden
 en: there is no databases in this directory
 es: ninguna base de datos existe en esta carpeta
@@ -85,6 +90,8 @@ sv: det finns inga databaser i denna katalog
 <p>
 
 [
+co: Scrivite u nome chì vò vulete dà à a vostra basa di dati.
+    Di regula, serà u listessu nome in u novu cartulare.
 de: Gib den Namen an, den du deiner Datenbank geben möchtest. 
     Wenn du nichts angibst, bekommt sie den gleichen Namen wie die
     alte Datenbank.
@@ -109,6 +116,7 @@ sv: Skriv in namnet du vill kalla din databas. Skriver du ingenting kommer
 <p>
 
 [
+co: Pudete selezziunà un’ozzione :
 de: Wenn gewünscht, wähle die folgende Option:
 en: You can select an option:
 es: Ud. puede seleccionar una opción:
@@ -124,11 +132,14 @@ sv: Du kan välja en option:
 
 <tr><td><input type=checkbox name=ged value="on">   </td>
 <td>[
+co: Passate da un schedariu GEDCOM. Da regula, st’azzione ùn hè
+    micca ricumandata ; ci vole à pruvalla solu quandu a prucedura
+	nurmale ùn funziuneghja micca.
 de: Mittels GEDCOM-Datei übernehmen. A priori wird dies nicht
     empfohlen, jedoch solltest du diese Variante versuchen, wenn
     die normale Übernahme nicht funktioniert.
 en: Pass by a GEDCOM file. A priori, it is not recommended, but if it
-    does not work with the normal procedure, try this option.</td>
+    does not work with the normal procedure, try this option.
 es: Pasar por un fichero GEDCOM. A priori, no es aconsejable, pero si esto
     no funciona con el procedimiento normal, ensaye con esta
     opción.
@@ -150,6 +161,7 @@ sv: Gå genom en GEDCOM-fil. Det är inte rekommenderat, men om det
 <p>
 
 [
+co: Tandu appughjate nant’à stu buttone :
 de: Dann drücke diesen Knopf:
 en: Then push this button:
 es: Apoye luego en este botón:
@@ -162,6 +174,7 @@ sv: Tryck sedan på denna knapp:
 <p>
 
 <input type=submit value="[
+co: Ricuperà
 de: Übernehmen
 en: Recover
 es: Recuperar
