--- a/bin/setup/lang/recover2.htm
+++ b/bin/setup/lang/recover2.htm
@@ -8,6 +8,7 @@
   <link rel="shortcut icon" href="images/favicon_gwsetup.png">
 
   <title>[
+co: Ricuperà una basa di dati - Fasa 3
 de: Eine bestehende Datenbank übernehmen - Phase 3
 en: Recover a database - Phase 3
 es: Recuperar una base - Fase 3
@@ -24,6 +25,7 @@ sv: Återskapa en databas - fas 3
 <div style="background:url('images/gwlogo.png') no-repeat left top; text-align:center; height:95px; line-height:95px; color:#2f6400;">
 <h1 style="margin:0;">
 [
+co: Ricuperà una basa di dati
 de: Eine bestehende Datenbank übernehmen
 en: Recover a database
 es: Recuperar una base
@@ -38,6 +40,12 @@ sv: Återskapa en databas
 <br><p>
 
 %v{[
+co: Avertimentu : una basa di dati chjamata « %o » esiste dighjà
+    in u <a href="gwsetup?lang=%l;v=list.htm">cartulare di
+	destinazione</a>. S’è vò primete nant’à u buttone quaghjò,
+	sta basa serà squassata. S’è vò avete dighjà fattu st’azzione,
+	forse ghjè u so risultatu, è dunque ùn hè micca impurtante.
+	Osinnò, rivinite in daretu è sciglite un altru nome per a vostra basa.
 de: <b>Warnung:</b> Im <a href="gwsetup?lang=%l;v=list.htm">Zielverzeichnis</a>
     existiert bereits eine Datenbank mit dem Namen "%o".
     Wenn du den "Ok"-Knopf drückst, wird sie gelöscht.<p>
@@ -83,6 +91,7 @@ sv: Varning: det finns redan en databas benämnd "%o" i
 ]<p>}
 
 [
+co: Cartulare è basa di dati d’origine :
 de: Startverzeichnis und Datenbank:
 en: Starting directory and database:
 es: Carpeta y base inicial:
@@ -98,6 +107,7 @@ sv: Startkatalog och databas:
 </pre>
 
 [
+co: Cartulare è basa di dati di destinazione :
 de: Zielverzeichnis und Datenbank:
 en: Destination directory and database:
 es: Carpeta y base final:
@@ -115,6 +125,8 @@ sv: Målkatalog och databas:
 <p>
 
 [
+co: Avertimentu : l’operazione pò piglià parechje seconde
+    o parechji minuti secondu à u casu.
 de: Warnung: Je nach Fall kann diese Operation 
     einige Sekunden oder Minuten benötigen. Bitte habe Geduld.
 en: Warning: the operation can take several seconds or minutes, depending
@@ -134,6 +146,7 @@ sv: Varning: operationen kan ta flera sekunder eller minuter, beroende på fall.
 <p>
 
 [
+co: Primete nant’à u buttone quaghjò per lancià l’operazione.
 de: Drücke den Knopf, um die Operation zu starten
 en: Push the below button to launch the operation
 es: Apoye en el botón siguiente para lanzar la operación
@@ -141,7 +154,9 @@ fr: Appuyez sur le bouton ci-dessous pour lancer l’opération
 it: Cliccate sul bottone qui sotto per lanciare l'operazione
 lv: Nospiediet zemâk esoðo podziòu, lai uzsâktu datu bâzes atjauninâðanu
 sv: Tryck på knappen nedan för att starta operationen
-]%v{<br><blink><font color=red>[
+]%v{<br><blink><font color=red>
+[
+co:  è rimpiazzà a basa « %o » in u cartulare di destinazione
 de:  und die Datenbank "%o" im Zielverzeichnis zu löschen
 en: , and overwrite the database "%o" of the destination directory
 es:  y destruir la "%o" de la carpeta final
@@ -164,6 +179,8 @@ sv:  och radera databasen "%o" i målkatalogen
 <p>
 
 [
+co: Per a vostra infurmazione, st’operazione currisponde
+    à sta seguita di cumande :
 de: Zu deiner Information: Diese Funktion entspricht der Ausführung
     der folgenden Kommandos:
 en: For information, this operation corresponds to the following commands:
