--- a/bin/setup/lang/ren_ok.htm
+++ b/bin/setup/lang/ren_ok.htm
@@ -8,6 +8,7 @@
   <link rel="shortcut icon" href="images/favicon_gwsetup.png">
 
   <title>[
+co: Operazione compia
 de: Operation durchgeführt
 en: Operation completed
 es: Operación terminada
@@ -24,6 +25,7 @@ sv: Operationen klar
 <div style="background:url('images/gwlogo.png') no-repeat left top; text-align:center; height:95px; line-height:95px; color:#2f6400;">
 <h1 style="margin:0;">
 [
+co: Operazione compia
 de: Operation durchgeführt
 en: Operation completed
 es: Operación terminada
@@ -38,6 +40,8 @@ sv: Operationen klar
 <br><p>
 
 [
+co: E vostre base di dati sò state rinuminate.
+    Eccu a nova lista :
 de: Deine Datenbank wurde umbenannt. Hier ist die neue Übersicht:
 en: Your databases have been renamed. Here is the new list:
 es: Sus bases de datos han cambiado de nombre.
@@ -56,6 +60,7 @@ sv: Dina databaser har blivit omdöpta. Här är den nya listan:
 
 %b{<li><a href="http://%m:%P/%a">%a</a>|
 <li>[
+co: ùn ci hè alcuna basa di dati à stu mumentu
 de: keine Datenbank vorhanden
 en: there is no database at present
 es: actualmente no hay ninguna base de datos 
@@ -70,6 +75,8 @@ sv: det finns ingen databas för tillfället
 <p>
 
 [
+co: Pudete rivene à u <a href="gwsetup?lang=%l;v=welcome.htm">listinu
+    principale</a>.
 de: Zurück zum <a href="gwsetup?lang=%l;v=welcome.htm">Hauptmenü</a>.
 en: You can return to the <a href="gwsetup?lang=%l;v=welcome.htm">main menu</a>.
 es: Ud. puede regresar al <a href="gwsetup?lang=%l;v=welcome.htm">menú
