--- a/bin/setup/lang/rename.htm
+++ b/bin/setup/lang/rename.htm
@@ -8,6 +8,7 @@
   <link rel="shortcut icon" href="images/favicon_gwsetup.png">
 
   <title>[
+co: Cambiamentu di nome
 de: Datenbank umbenennen
 en: Renaming
 es: Cambio de nombre
@@ -24,6 +25,7 @@ sv: Döpa om
 <div style="background:url('images/gwlogo.png') no-repeat left top; text-align:center; height:95px; line-height:95px; color:#2f6400;">
 <h1 style="margin:0;">
 [
+co: Cambiamentu di nome
 de: Datenbank umbenennen
 en: Renaming
 es: Cambio de nombre
@@ -39,6 +41,7 @@ sv: Döpa om
 <input type=hidden name=lang value="%l">
 <ul><li>
 [
+co: Cambiate u nome o tutti quelli chì vò vulete :
 de: Ändere die Namen wie gewünscht:
 en: Change the names you want:
 es: Chambie el o los nombres que Ud. desee:
@@ -57,6 +60,7 @@ sv: Ändra de namn du vill:
 <td><input name="%a" value="%a" size=20></td>
 </tr>|
 <tr align=left><td>- [
+co: ùn ci hè alcuna basa di dati à stu mumentu
 de: keine Datenbank vorhanden
 en: there is no database at present
 es: ninguna base de datos existe actualmente
@@ -70,6 +74,7 @@ sv: det finns ingen databas för tillfället
 <p>
 <li>
 [
+co: Tandu appughjate nant’à stu buttone :
 de: Dann drücke diesen Knopf:
 en: Then push this button:
 es: Apoye luego en este botón
@@ -83,6 +88,7 @@ sv: Tryck sedan på denna knapp:
 
 <input type=submit value="[
 [
+co: Rinuminà
 de: Umbenennen
 en: Rename
 es: Cambio de nombre
