--- a/bin/setup/lang/save.htm
+++ b/bin/setup/lang/save.htm
@@ -8,6 +8,7 @@
   <link rel="shortcut icon" href="images/favicon_gwsetup.png">
 
   <title>[
+co: Arregistramentu è risturazione
 de: Sichern und restaurieren
 en: Save and Restore
 es: Copia de Seguridad y Restauración
@@ -25,6 +26,7 @@ sv: Spara och återskapa
   text-align:center; height:95px; line-height:95px; color:#2f6400;">
 <h1 style="margin:0;">
 [
+co: Arregistramentu è risturazione
 de: Sichern und restaurieren
 en: Save and Restore
 es: Copia de Seguridad y Restauración
@@ -39,6 +41,10 @@ sv: Spara och återskapa
 <br><p>
 
 [
+co: Per fà una salvaguardia di a vostra basa di dati, appiecate
+    l’<a href="gwsetup?lang=%l;v=gwu.htm">estrazzione d’un schedariu di fonte
+	GeneWeb</a>. È dopu, cupiate u schedariu ottinutu altronde
+	nant’à u discu, o megliu, nant’à una memoria esterna.
 de: Um deine Datenbank zu sichern, verwende die
     <a href="gwsetup?lang=%l;v=gwu.htm">Extraktion einer 
     GeneWeb-Quelldatei</a>.
@@ -71,6 +77,9 @@ sv: För att spara din databas, använd
 <p>
 
 [
+co: Per risturà una basa di dati à u furmatu gw, appiecate
+    a <a href="gwsetup?lang=%l;v=gwc.htm">creazione à partesi
+	d’un schedariu di fonte GeneWeb</a>.
 de: Um eine gw Datenbank zu restaurieren, verwende die Funktion
     <a href="gwsetup?lang=%l;v=gwc.htm">Datenbank aus GeneWeb-Quelldatei 
     erzeugen</a>.
@@ -95,6 +104,8 @@ sv: För att återskapa en databas, använd
 <p>
 
 [
+co: Pudete rivene à u <a href="gwsetup?lang=%l;v=welcome.htm">listinu
+    principale</a>.
 de: Zurück zum
     <a href="gwsetup?lang=%l;v=welcome.htm">Hauptmenü</a>.
 en: You can return to the
