--- a/bin/setup/lang/simple.htm
+++ b/bin/setup/lang/simple.htm
@@ -8,6 +8,7 @@
   <link rel="shortcut icon" href="images/favicon_gwsetup.png">
 
   <title>[
+co: Metoda simplice
 de: Einfache Methode
 en: Simple method
 es: Método simple
@@ -25,6 +26,7 @@ sv: Enkel metod
 <div style="background:url('images/gwlogo.png') no-repeat left top; text-align:center; height:95px; line-height:95px; color:#2f6400;">
 <h1 style="margin:0;">
 [
+co: Metoda simplice
 de: Einfache Methode
 en: Simple method
 es: Método simple
@@ -42,6 +44,7 @@ sv: Enkel metod
 <p>
 <ul><li>
 [
+co: Scrivite u nome chì vò vulete dà à a vostra basa di dati :
 de: Gib den Namen ein, den deine Datenbank tragen soll:
 en: Write the name you want for your database :
 es: Escriba aquí el nombre que Ud. desea dar a su base de datos:
@@ -57,6 +60,7 @@ sv: Skriv in namnet du vill kalla din databas:
 <p>
 <li>
 [
+co: Tandu appughjate nant’à stu buttone :
 de: Dann drücke diesen Knopf:
 en: Then push this button:
 es: Apoye luego en este botón:
@@ -68,6 +72,7 @@ sv: Tryck sedan på knappen:
 ]
 <p>
 <input type="submit" value="[
+co: Creà
 de: Anlegen
 en: Create
 es: Crear
