--- a/bin/setup/lang/traces.htm
+++ b/bin/setup/lang/traces.htm
@@ -8,6 +8,7 @@
   <link rel="shortcut icon" href="images/favicon_gwsetup.png">
 
   <title>[
+co: Traccie di l’ultima cumanda
 de: Trace-Ausgabe des letzten Kommandos
 en: Trace of the latest command
 es: Trazas del último comando
@@ -26,6 +27,7 @@ lv: Pçdçjâs komandas izpildes pçdas
 <div style="background:url('images/gwlogo.png') no-repeat left top; text-align:center; height:95px; line-height:95px; color:#2f6400;">
 <h1 style="margin:0;">
 [
+co: Traccie di l’ultima cumanda
 de: Trace-Ausgabe des letzten Kommandos
 en: Traces of the latest command
 es: Trazas del último comando
@@ -42,6 +44,7 @@ lv: Pçdçjâs komandas izpildes pçdas
 <br /><p />
 
 [
+co: Eccu u cuntenutu di u schedariu « comm.log » :
 de: Hier ist der Inhalt der Datei "comm.log":
 en: Here is the contents of the file "comm.log":
 es: He aquí el contenido del fichero "comm.log":
@@ -56,6 +59,7 @@ lv: Ðeit ir datnes "comm.log" saturs:
 <dl><dt><dd>
 <pre>
 %g{- [
+co: schedariu viotu
 de: empty file
 en: empty file
 es: fichero vacio
@@ -70,12 +74,14 @@ lv: datne ir tukða
 </dl>
 
 [
+co: È u cuntenutu di gwsetup.log 
 en: And the content of gwsetup.log 
 fr: Et le contenu de gwsetup.log
 ]
 <dl><dt><dd>
 <pre>
 %G{- [
+co: nisuna traccia
 de: no traces
 en: no traces
 es: ningÃºn indicio
@@ -90,6 +96,8 @@ sv: ingen utskrift
 
 
 [
+co: Pudete rivene à u <a href="gwsetup?lang=%l;v=welcome.htm">listinu
+    principale</a>.
 de: Zurück zum <a href="gwsetup?lang=%l;v=welcome.htm">Hauptmenü</a>.
 en: You can return to the <a href="gwsetup?lang=%l;v=welcome.htm">main
     menu</a>.
