--- a/bin/setup/lang/update_nldb.htm
+++ b/bin/setup/lang/update_nldb.htm
@@ -8,6 +8,7 @@
   <link rel="shortcut icon" href="images/favicon_gwsetup.png">
 
   <title>[
+co: Update_nldb
 de: Update_nldb
 en: Update_nldb
 es: Update_nldb
@@ -25,6 +26,7 @@ sv: Update_nldb
 <div style="background:url('images/gwlogo.png') no-repeat left top; text-align:center; height:95px; line-height:95px; color:#2f6400;">
 <h1 style="margin:0;">
 [
+co: Attualizazione di i liami scheda / cronaca famigliale 
 de: Aktualisieren Sie Links-Seite / Familien-Chronik
 en: Update links page / family chronicle
 es: Actualizar página de enlaces / crónica familiar
@@ -42,6 +44,8 @@ sv: Uppdatera länksida / släktkrönika
 <input type="hidden" name="lang" value="%l">
 <ul><li>
 [
+co: Selezziunate a vostra basa di dati clicchendu
+    nant’à u buttone assuciatu.
 de: Wähle deine Datenbank mit dem zugehörigen Schalter.
 en: Select your database by clicking on the associated button.
 es: Seleccione su base de datos cliqueando en el botón asociado.
@@ -62,6 +66,7 @@ sv: Välj din databas genom att klicka på motsvarande knapp.
 </tr>|
 <tr align="left">
 <td>- [
+co: ùn ci hè alcuna basa di dati à stu mumentu
 de: keine Datenbank vorhanden
 en: there is no database at present
 es: no existe ninguna base de datos actualmente
@@ -75,6 +80,7 @@ sv: det finns ingen databas för tillfället
 <p>
 <li>
 [
+co: È appughjate nant’à stu buttone :
 de: Dann drücke diesen Knopf:
 en: Then press this button:
 es: Luego apoye en este botón:
@@ -87,6 +93,7 @@ sv: Tryck sedan på denna knapp:
 <p>
 
 <input type="submit" value="[
+co: Update_nldb
 de: Update_nldb
 en: Update_nldb
 es: Update_nldb
