--- a/bin/setup/lang/welcome.htm
+++ b/bin/setup/lang/welcome.htm
@@ -35,7 +35,7 @@ sv: ledning och skapande
     <div>
     <span style="font-weight:bold">
 [
-co: Consultà...
+co: Cunsultà...
 de: Betrachte…
 en: Consult…
 es: Consultar…
@@ -49,7 +49,7 @@ sv: Konsultera…
 <ul>
 
 <li>[
-co: <a href="gwsetup?lang=%l;v=list.htm">l'arburi chì esistenu</a> 
+co: <a href="gwsetup?lang=%l;v=list.htm">l’arburi chì esistenu</a>
 de: <a href="gwsetup?lang=%l;v=list.htm">Stammbaum</a>
 en: <a href="gwsetup?lang=%l;v=list.htm">Family Tree</a>
 es: <a href="gwsetup?lang=%l;v=list.htm">árbol genealógico</a>
@@ -61,7 +61,7 @@ sv: <a href="gwsetup?lang=%l;v=list.htm">Family Tree</a>
 ]
 
 <li>[
-co: <a href="gwsetup?lang=%l;v=traces.htm">a cronulugia è e statistiche</a>.
+co: <a href="gwsetup?lang=%l;v=traces.htm">e traccie è e statistiche</a>.
 de: <a href="gwsetup?lang=%l;v=traces.htm">der Fehler der Geschichte und Statistik</a>.
 en: <a href="gwsetup?lang=%l;v=traces.htm">the error history and statistics</a>.
 es: <a href="gwsetup?lang=%l;v=traces.htm">el historial de errores y estadísticas</a>
@@ -77,7 +77,7 @@ sv: <a href="gwsetup?lang=%l;v=traces.htm">felhistorik och statistik</a>.
     <div>
     <span style="font-weight:bold">
 [
-co: arregistrà
+co: Arregistrà…
 de: Sparen…
 en: Save…
 es: Ahorrar…
@@ -135,7 +135,7 @@ sv: Skapa Family Tree
 <ul>
 
 <li>[
-co: à partesi d'un <a href="gwsetup?lang=%l;v=ged2gwb.htm">schedariu GEDCOM</a>
+co: à partesi d’un <a href="gwsetup?lang=%l;v=ged2gwb.htm">schedariu GEDCOM</a>
 de: aus einer <a href="gwsetup?lang=%l;v=ged2gwb.htm">GEDCOM-Datei</a>
 en: from a <a href="gwsetup?lang=%l;v=ged2gwb.htm">GEDCOM file</a>
 es: a partir de un <a href="gwsetup?lang=%l;v=ged2gwb.htm">fichero GEDCOM</a>
@@ -147,7 +147,7 @@ sv: från en <a href="gwsetup?lang=%l;v=ged2gwb.htm">GEDCOM-fil</a>
 ] (ged2gwb)
 
 <li>[
-co: à partesi d'un <a href="gwsetup?lang=%l;v=gwc.htm">schedariu di fonte GeneWeb</a>
+co: à partesi d’un <a href="gwsetup?lang=%l;v=gwc.htm">schedariu di fonte GeneWeb</a>
 de: aus einer <a href="gwsetup?lang=%l;v=gwc.htm">GeneWeb-Quelldatei</a>
 en: from a <a href="gwsetup?lang=%l;v=gwc.htm">GeneWeb source file</a>
 es: a partir de un <a href="gwsetup?lang=%l;v=gwc.htm">fichero fuente GeneWeb</a>
@@ -181,7 +181,7 @@ sv: <a href="gwsetup?lang=%l;v=simple.htm">tom</a>
 <div style="float:left;">
 <span>
 [
-co: Ozzioni d'espertu
+co: Ozzioni esperte
 de: Erweiterte Optionen
 en: Advanced Options
 es: Opciones avanzadas
@@ -206,7 +206,7 @@ sv: <a href="gwsetup?lang=%l;v=cleanup.htm">Upprensning</a>
 ] (consang)
 
 <li>[
-co: <a href="gwsetup?lang=%l;v=rename.htm">Cambiu di nome</a>
+co: <a href="gwsetup?lang=%l;v=rename.htm">Cambiamentu di nome</a>
 de: <a href="gwsetup?lang=%l;v=rename.htm">Umbenennen</a>
 en: <a href="gwsetup?lang=%l;v=rename.htm">Renaming</a>
 es: <a href="gwsetup?lang=%l;v=rename.htm">Cambio de nombre</a>
@@ -218,7 +218,7 @@ sv: <a href="gwsetup?lang=%l;v=rename.htm">Oomdöpning</a>
 ]
 
 <li>[
-co: <a href="gwsetup?lang=%l;v=delete.htm">Cacciatura</a>
+co: <a href="gwsetup?lang=%l;v=delete.htm">Squassatura</a>
 de: <a href="gwsetup?lang=%l;v=delete.htm">Löschen</a>
 en: <a href="gwsetup?lang=%l;v=delete.htm">Deletion</a>
 es: <a href="gwsetup?lang=%l;v=delete.htm">Supresión</a>
@@ -230,7 +230,7 @@ sv: <a href="gwsetup?lang=%l;v=delete.htm">Radering</a>
 ]
 
 <li>[
-co: <a href="gwsetup?lang=%l;v=merge.htm">Fusione cù d'altre base genealogiche</a>
+co: <a href="gwsetup?lang=%l;v=merge.htm">Fusione cù d’altre base di dati</a>
 de: <a href="gwsetup?lang=%l;v=merge.htm">Zusammenführen mit anderen Datenbanken</a>
 en: <a href="gwsetup?lang=%l;v=merge.htm">Merging with other databases</a>
 fi: <a href="gwsetup?lang=%l;v=merge.htm">Yhdistyminen muiden tietokantojen kanssa</a>
@@ -252,7 +252,7 @@ sv: <a href="gwsetup?lang=%l;v=save.htm">Spara och återskapa</a>
 ] (gwu)
 
 <li>[
-co: <a href="gwsetup?lang=%l;v=consang.htm">Initialisazione di e consanguinità</a>
+co: <a href="gwsetup?lang=%l;v=consang.htm">Prugramma d’iniziu di e cunsanguinità</a>
 de: <a href="gwsetup?lang=%l;v=consang.htm">Initialisierung der Blutsverwandtschaften</a>
 en: <a href="gwsetup?lang=%l;v=consang.htm">Initialisation of consanguinities</a>
 es: <a href="gwsetup?lang=%l;v=consang.htm">Inicialización de las consanguinidades</a>
@@ -264,7 +264,7 @@ sv: <a href="gwsetup?lang=%l;v=consang.htm">Beräkning av blodsband</a>
 ] (consang)
 
 <li>[
-co: <a href="gwsetup?lang=%l;v=update_nldb.htm">Attualisazione di i ligami scheda/cronaca famigliale</a>
+co: <a href="gwsetup?lang=%l;v=update_nldb.htm">Attualizazione di i liami scheda / cronaca famigliale</a>
 de: <a href="gwsetup?lang=%l;v=update_nldb.htm">Aktualisieren Sie Links-Seite / Familien-Chronik</a>
 en: <a href="gwsetup?lang=%l;v=update_nldb.htm">Update links page / family chronicle</a>
 es: <a href="gwsetup?lang=%l;v=update_nldb.htm">Actualizar página de enlaces / crónica familiar</a>
@@ -276,18 +276,19 @@ sv: <a href="gwsetup?lang=%l;v=update_nldb.htm">Uppdatera länksida / släktkrö
 ] (update_nldb)
 
 <li>[
-co: <a href="gwsetup?lang=%l;v=connex.htm">Calculeghja i cumpunenti cunnessi</a>
+co: <a href="gwsetup?lang=%l;v=connex.htm">Calculu di i cumpunenti cunnessi</a>
 en: <a href="gwsetup?lang=%l;v=connex.htm">Compute connected componants</a>
 fr: <a href="gwsetup?lang=%l;v=connex.htm">Calcule les composantes connexes</a>
 ] (connex)
 
 <li>[
-co: <a href="gwsetup?lang=%l;v=gwdiff.htm">Calculeghja a sfarenza trà duie base</a>
+co: <a href="gwsetup?lang=%l;v=gwdiff.htm">Calculu di a sfarenza trà duie base</a>
 en: <a href="gwsetup?lang=%l;v=gwdiff.htm">Compute the difference between two bases</a>
 fr: <a href="gwsetup?lang=%l;v=gwdiff.htm">Calcule la différence entre deux bases</a>
 ] (gwdiff)
 
 <li>[
+co: <a href="gwsetup?lang=%l;v=gwfix.htm">Risuluzione di prublemi in una basa</a>
 en: <a href="gwsetup?lang=%l;v=gwfix.htm">Fixes problems in a base</a>
 fr: <a href="gwsetup?lang=%l;v=gwfix.htm">Corrige les problèmes d'une base</a>
 ] (gwfixbase)
@@ -313,7 +314,7 @@ sv: Konfigurera
 <ul>
 
 <li>[
-co: i parametri d'una <a href="gwsetup?lang=%l;v=gwf.htm">basa di dati</a>
+co: i parametri d’una <a href="gwsetup?lang=%l;v=gwf.htm">basa di dati</a>
 de: die Parameter einer <a href="gwsetup?lang=%l;v=gwf.htm">Datenbank</a>
 en: the parameters of a <a href="gwsetup?lang=%l;v=gwf.htm">database</a>
 es: los parámetros de una <a href="gwsetup?lang=%l;v=gwf.htm">base de datos</a>
@@ -348,7 +349,7 @@ sv: parametrarna för <a href="gwd?lang=%l;v=gwd.htm">gwd servicen</a>
 [
 co: Pudete cunsultà dinù a <a
     href="http://geneweb.tuxfamily.org/wiki/GeneWeb" target="_blank">ducumentazione</a> sana di
-    <b><font color=#2f6400>GeneWeb</font></b>.
+    <font color=#2f6400><b>GeneWeb</b></font>.
 de: Du kannst auch auf die komplette
     <font color=#2f6400><b>GeneWeb</b></font>-<a
     href="http://geneweb.tuxfamily.org/wiki/GeneWeb" target="_blank">Dokumentation</a> zugreifen.
@@ -376,7 +377,7 @@ sv: Du kan också konsultera den kompletta <a
 <div style="float: left; align: center;">
 <span>
 [
-co: Affissà in:
+co: Affissà in :
 en: Display in:
 fr: Afficher en :
 ]
